# skagit-bmc-registration

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py  lambda.Dockerfile  linux.Dockerfile  manage.py  migrate_new_year.py  pyproject.toml  readme.md  requirements.txt  set_dev_env.sh
.github/workflows/: build_docker.yml
SkagitRegistration/: asgi.py  settings.py  urls.py  wsgi.py
infra/: autotag.py  check_supabase_deployment.py  database.py  management_lambdas.py  taggable.py
nginx/: Dockerfile  nginx.conf  start.sh
registration/: admin.py  apps.py  forms.py  instructor_urls.py  models.py  rest_router.py  rest_views.py  serializers.py  sign_up_urls.py  sign_up_views.py  urls.py  views.py
registration/instructor/: instructor_urls.py  instructor_views.py
registration/management/commands/: backup_db.py  check_invoices.py  restore_db.py
registration/migrations/: 0001_initial.py  0002_auto_20201125_2307.py  0002_auto_20210106_0549.py  0002_auto_20220103_0643.py  0002_classtype_visible.py  0002_coursetype_abbreviation.py  0002_manual_add_instructor_group.py  0002_registrationsettings_refund_period.py  0002_skagitclass_skagitclassdates.py  0003_auto_20201125_1946.py  0003_auto_20201125_2317.py  0003_auto_20201126_0815.py  0003_auto_20210106_0553.py  0003_auto_20211126_0103.py  0003_coursebought_product_id.py  0003_earlysignupemail_registrationsettings.py  0003_previousstudentdiscount_squashed_0005_coursebought_coupon_id.py  0004_auto_20201126_2130.py  0004_auto_20201231_2025.py  0004_auto_20210107_0431.py  0004_coursebought_price_id.py  0005_auto_20201127_0153.py  0005_registrationsettings_cancellation_fee.py  0005_remove_course_wait_list.py  0006_alter_coursebought_course.py  0006_auto_20201127_0846.py  0006_auto_20210101_0133.py  0006_auto_20211225_0728.py  0007_alter_gearitem_options.py  0007_auto_20201127_2122.py  0007_discount_stripe_id.py  0007_waitlistinvoice.py  0008_profile_stripe_customer_id.py  0008_registrationform_skagit_county_resident.py
staticfiles/: empty.txt
templates/: base.html
templates/bmc_registration/: available_courses.html  bmc_registration.html  cart.html  course_sign_up.html  gear_list.html  home.html  profile.html  refund.html  registration_form.html  registration_home.html
templates/bmc_registration/instructor/: current_registrations.html  registrant_view.html
templates/registration/: account_activation_email.html  account_activation_email.txt  account_activation_sent.html  bmc_registration.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt  register.html  signup.html
tests/: conftest.py  test_models.py  test_rest_views.py  test_with_client.py
