[project]
name = "skagit-bmc-registration"
version = "0.1.0"
description = "A site to help with registration for the Skagit BMC."
authors = [{ name = "Raymond DeVries" }]
requires-python = "==3.11.10"
license = "MIT"
dependencies = [
    "django~=5.0",
    "django-localflavor~=4.0",
    "django-phonenumber-field[phonenumberslite]~=8.0",
    "django-bulma~=0.9",
    "djangorestframework>=3.14.0,<4",
    "django-extensions>=3.2.1,<4",
    "stripe>=4.2.0,<5",
    "whitenoise>=6.2.0,<7",
    "dj-database-url>=1.0.0,<2",
    "gunicorn>=20.1.0,<21",
    "sentry-sdk>=1.9.10,<2",
    "psycopg2>=2.9.4,<3",
]

[dependency-groups]
dev = [
    "pytest>=7.1.3,<8",
    "pre-commit>=2.20.0,<3",
    "pytest-django>=4.5.2,<5",
    "model_bakery>=1.8.0,<2",
    "isort>=5.10.1,<6",
    "pytest-freezegun>=0.4.2,<0.5",
    "Faker>=15.1.1,<16",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "SkagitRegistration.settings"


