[project]
name = "skagit-bmc-registration"
version = "0.1.0"
description = "A site to help with registration for the Skagit BMC."
authors = [{ name = "Raymond DeVries" }]
requires-python = "==3.13.1"
license = "MIT"
dependencies = [
    "boto3>=1.36.24",
    "dj-database-url>=2.3.0",
    "django-bulma>=0.9.0",
    "django-extensions>=3.2.3",
    "django-localflavor>=4.0",
    "django-phonenumber-field[phonenumberslite]~=8.0",
    "django-storages>=1.14.4",
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "mangum>=0.19.0",
    "psycopg2-binary>=2.9.10",
    "sentry-sdk>=1.9.10,<2",
    "stripe>=4.2.0,<5",
    "setuptools>=75.8.0",
]

[dependency-groups]
dev = [
    "Faker>=15.1.1,<16",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "isort>=5.10.1,<6",
    "model_bakery>=1.8.0,<2",
    "pre-commit>=2.20.0,<3",
    "pulumi-aws>=6.67.0",
    "pulumi-awsx>=2.21.0",
    "pulumi-command>=1.0.1",
    "pulumi-local>=1.3.0",
    "pulumi-random>=4.17.0",
    # Add with `pulumi package add terraform-provider supabase/supabase`
    "pulumi-supabase",
    "pulumi>=3.148.0",
    "pytest-django>=4.5.2,<5",
    "pytest-freezegun>=0.4.2,<0.5",
    "pytest>=7.1.3,<8",
    "rich>=13.9.4",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "SkagitRegistration.settings"

[tool.uv.sources]
pulumi-supabase = { path = "sdks/supabase" }


